# chatbot-srv

./: .gitignore  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml
.credentials/: keys.json
alembic/: env.py
alembic/versions/: 2024_02_18_1244-25f626fae9e0_add_customer_table.py  2024_02_19_0916-527ad8c78c05_initial_migration.py  2024_02_20_1335-e3e308ead997_initial_migration.py  2024_02_25_0921-c12d72bd6655_add_system_prompt_to_chatbot.py
app/: const.py  constants.py  main.py  prompts.py
app/backend/: config.py  settings.py
app/backend/chat/agents/: knowledge_base_agent.py
app/backend/chat/embeddings/: openai_embeddings.py
app/backend/chat/llms/: chatopenai.py
app/backend/chat/memories/: postgres_memory.py
app/backend/chat/vector_stores/: pgvector_vector_store.py  pgvector_vector_store_base.py
app/backend/db/: dependencies.py  models.py  repository.py  session.py
app/backend/db/models/: base.py  customer.py
app/backend/embeddings/: openai.py
app/backend/llms/: chatopenai.py
app/backend/middleware/: check_request_headers.py
app/backend/vector_stores/: pgvector_vector_store_base.py  pinecone.py  pinecone_vector_store.py
app/repositories/: chatbot_repository.py  customer_repository.py
app/routers/: chat.py  chat_router.py  db_router.py  embeddings.py  embeddings_router.py  info.py  info_router.py  leads_router.py  solar_router.py  test_router.py
app/schemas/: base_schema.py  chat_request.py  chat_request_schema.py  chat_response.py  chat_response_schema.py  google_geocoding_result_schema.py  google_solar_building_insights_response_schema.py  lead_request_schema.py  solar_potential_request_schema.py  solar_potential_response_schema.py  sync_embeddings_schema.py
app/services/: chat_service.py  db_service.py  embeddings.py  embeddings_service.py  embeddings_services.py  faq.py  faq_service.py  google_api_service.py  leads_service.py  solar_potential_service.py  test_service.py
(+2 files in other folders)
