[tool.poetry]
name = "pv-chatbot-srv"
version = "0.1.0"
description = ""
authors = ["Marco Gerstmann <mail@marcogerstmann.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.5"
openai = "^1.11.0"
chromadb = "^0.4.22"
tiktoken = "^0.5.2"
langchain-openai = "^0.0.5"
pinecone-client = "2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
